@@ -78,10 +78,11 @@ _screencast() {
             ;;
         -v|--video-encoder)
             local video_encoders='x264 openh264 h264_nvenc h264_vaapi h264_qsv
-                                  x265 kvazaar svt_hevc hevc_nvenc hevc_vaapi
-                                  hevc_qsv vp8 vp8_vaapi vp9 svt_vp9 vp9_vaapi
-                                  theora wmv aom_av1 svt_av1 rav1e av1_nvenc
-                                  av1_qsv av1_vaapi none'
+                                  h264_vulkan x265 kvazaar svt_hevc hevc_nvenc
+                                  hevc_vaapi hevc_qsv hevc_vulkan vp8 vp8_vaapi
+                                  vp9 svt_vp9 vp9_vaapi theora wmv aom_av1
+                                  svt_av1 rav1e av1_nvenc av1_qsv av1_vaapi
+                                  none'
             COMPREPLY=( $(compgen -W "$video_encoders" -- $cur) )
             return 0
             ;;
